--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: Hello World!
         shell: bash
         run: |
-          echo "hello world!"
+          echo "hello world - dsk!"
